--- a/src/Fornecedor/CadastroFornecedor/CadastroFornecedor.css
+++ b/src/Fornecedor/CadastroFornecedor/CadastroFornecedor.css
@@ -1,8 +1,14 @@
+h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* ESTILO FORMULÁRIO */
 .formulario {
     width: 45%;
     margin: 0 auto;
-    margin-top: 60px; 
+    margin-top: 35px; 
     font-family: 'Poppins', sans-serif;
 }
 
@@ -10,7 +16,8 @@
     background: linear-gradient(135deg, #c0a0e2 0%, #87aef3 100%);
     height: 100vh;
     transition: 0.5s;
-  }
+    font-family: 'Poppins', sans-serif;
+}
 
 /* ESTILO INPUT FORMULÁRIO */
 .formulario input {
