--- a/src/Produto/EditaProduto/editaProduto.css
+++ b/src/Produto/EditaProduto/editaProduto.css
@@ -1,10 +1,22 @@
+h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* ESTILO FORMULÁRIO */
 .formulario {
     width: 45%;
     margin: 0 auto;
-    margin-top: 60px; 
+    margin-top: 35px; 
     font-family: 'Poppins', sans-serif;
 }
+
+.content {
+    background: linear-gradient(135deg, #c0a0e2 0%, #87aef3 100%);
+    height: 100vh;
+    transition: 0.5s;
+  }
 
 /* ESTILO INPUT FORMULÁRIO */
 .formulario input {
@@ -22,68 +34,43 @@
     outline: none;
 }
 
+.formulario input:focus {
+    border: 2px solid #6bb3b3; /* Adiciona uma borda arredondada */
+    box-shadow: 0 0 5px rgba(107, 179, 179, 0.5); /* Adiciona uma sombra */
+}
+
 /* ESTILO LABEL FORMULÁRIO */
 .formulario label {
     text-align: left;
 }
 
-
-/* RADIO BUTTONS */
-.radio-buttons {
-    display: grid;
-    grid-template-columns: min-content min-content;
-    grid-column-gap: 50px;
-    align-items: center;
-    justify-items: start;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.radio-button-container {
-    display: grid;
-    grid-template-columns: min-content auto;
-    align-items: center;
-    margin-top: -10px;
-}
-
-.radio-buttons label {
-    white-space: nowrap;
-}
-
-.radio-buttons input[type="radio"] {
-    margin-top: 15px; 
-    margin-right: 20px;
-    width: 23px;
-    height: 23px;
-}
-
-/* ESTILO CONTAINER CPNJ E INSCRIÇÃO ESTADUAL */
-.cpf-cnpj-container{
+/* ESTILO CONTAINER QUANTIDADE E PRECO */
+.quantidade-preco-container{
     text-align: left;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 25px;
 }
 
-/* ESTILO CONTAINER LOCALIDADE */
-.localidade-container {
-    text-align: left;
-    display: grid;
-    grid-template-columns: 330px 100px 1fr;
-    grid-column-gap: 25px;  
+/* ESTILO SELECT FORMULÁRIO */
+.formulario select {
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    background: #e0e3e6;
+    border: none;
+    font-size: 17px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    margin-bottom: 17px;
+    font-family: 'Poppins', sans-serif;
+    outline: none;
 }
 
-.localidade-container > div {
-    display: flex;
-    flex-direction: column;
-}
-
-/* ESTILO CONTAINER CONTATO */
-.contato-container {
-    text-align: left;
-    display: grid;
-    grid-template-columns: 330px 1fr;
-    grid-column-gap: 25px;
+/* Estilo personalizado para o foco */
+.formulario select:focus {
+    border: 2px solid #6bb3b3; /* Adiciona uma borda arredondada */
+    box-shadow: 0 0 5px rgba(107, 179, 179, 0.5); /* Adiciona uma sombra */
 }
 
 /* BOTÕES CRUD*/
@@ -121,21 +108,16 @@
 }
 
 /* Estilos específicos para cada botão */
-button[name="btIncluir"] {
+button[name="btAlterar"] {
     background-color: #27AE60;
     color: #F8F8EC;
 }
 
-button[name="btLimpar"] {
-    background-color: #6D8693;
-    color: #F8F8EC;
-}
+button[name="btDeletar"] {
+    background-color: #c0392b;
+    color: #f8f8ec;
+  }
 
-/* Efeitos de hover */
-button[name="btIncluir"]:hover {
-    background-color: #219653;
-}
-
-button[name="btLimpar"]:hover {
-    background-color: #5C7686;
-}
+  button[name="btDeletar"]:hover {
+    background-color: #a93226;
+  }
