--- a/src/Produto/ProdutoInicial/ProdutoInicial.css
+++ b/src/Produto/ProdutoInicial/ProdutoInicial.css
@@ -1,32 +1,57 @@
-h2{
+.content-produto {
+  background: linear-gradient(135deg, #c0a0e2 0%, #87aef3 100%);
+  height: 100vh;
+  transition: 0.5s;
+  font-family: 'Poppins', sans-serif;
+}
+
+h2 {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.input-busca-produto {
+  padding: 8px;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.input-busca-produto:focus {
+  border-color: #6bb3b3;
+  outline: none;
+}
+
+.input-busca-produto::placeholder {
+  color: #999;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+}
+
 .table-produto-container {
   display: inline-block;
-  margin-left: 12%;
   margin-top: 1%;
-  height: 550px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 540px;
   overflow-y: auto;
   overflow-x: auto;
   position: relative;
   border-radius: 15px;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  justify-content: center;
 }
 
-.content {
-  background: linear-gradient(135deg, #c0a0e2 0%, #87aef3 100%);
-  height: 100vh;
-  transition: 0.5s;
-}
-
-  
 .table-produto-container::-webkit-scrollbar {
-    display: none; 
+  display: none;
 }
 
 table {
@@ -79,24 +104,21 @@ tbody tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
   
-.editar-button {
-  background-color: #a7dfdf;
-  color: white;
+.editar-button-table {
+  background-color: #6f8bb488;
   border: none;
   border-radius: 5px;
-  padding: 8px 16px;
+  padding: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
-
-  &:hover {
-    background-color: #6bb3b3;
-  }
 }
 
-.editar-button img {
+.editar-button-table:hover{
+  background-color: #2c446888;
+}
+
+.editar-button-table img {
   max-width: 20px;
-  max-height: 20px;
-  margin-right: 8px;
+  max-height: 22px;
 }
 
 .btNovo {
@@ -111,7 +133,7 @@ tbody tr:last-child td:last-child {
   width: 55px;
   height: 55px;
   border: none;
-  background-color: #a7dfdf;
+  background-color: #6f8bb488;
   color: #000000;
   border-radius: 50%;
   cursor: pointer;
@@ -119,6 +141,6 @@ tbody tr:last-child td:last-child {
 }
 
 .btNovo button:hover {
-  background-color: #6bb3b3;
+  background-color: #2c446888;
 }
   
