--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,11 @@
 .header {
   width: 100%;
-  background-color: #2b4c7e3d;
+  background-color: #213b615b;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-radius: 25px;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -21,12 +22,11 @@ h1 {
 }
 
 .btNavigate {
-  background-color: #ffffff;
   width: 200px;
   height: 50px;
   border: none;
   border-radius: 10px;
-  color: #383939;
+  color: #000000;
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -40,5 +40,5 @@ h1 {
 }
 
 .btNavigate:hover {
-  background-color: #f2f2f2;
+  color: #ffffff;
 }
