--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,6 @@
 .content {
   background: linear-gradient(135deg, #c0a0e2 0%, #87aef3 100%);
-  height: 100vh;
+  min-height: 100vh;
   transition: 0.5s;
+  font-family: "Poppins", sans-serif;
 }
